# Ray-Tracer-TBB

./: README.md  index.html
Assignment_1/: CMakeLists.txt
Assignment_1/data/: test.json
Assignment_1/src/: closest_intersection.cpp  closest_intersection.h  define_scene.h  main.cpp  material.h  plane.cpp  plane.h  read_off.h  scene_elements.h  shading.cpp  shading.h  sphere.cpp  sphere.h  tri_mesh.cpp  tri_mesh.h  triangle.cpp  triangle.h
